--- a/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.1.9"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9"/>
   </ItemGroup>
 </Project>
