Added photo upload and manipulation

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "drdqd4i6q",
+    "ApiKey": "645913314991894",
+    "ApiSecret": "Go9zudKbGk1s3riumjhyJ_kOTgw"
+  }
 }
