--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
