--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,9 +25,12 @@
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-moment": "^5.0.0",
     "rxjs": "~6.6.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
